// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Module Module component 1`] = `
<div
  className="component obojobo-draft--modules--module"
  data-focussed={false}
  data-id="19468343-da4a-49d7-b5b5-19ebcde1f424"
  data-obo-component={true}
  data-type="ObojoboDraft.Modules.Module"
  id="obo-19468343-da4a-49d7-b5b5-19ebcde1f424"
>
  <div />
</div>
`;

exports[`Module Module component with child 1`] = `
<div
  className="component obojobo-draft--modules--module"
  data-focussed={false}
  data-id="19468343-da4a-49d7-b5b5-19ebcde1f424"
  data-obo-component={true}
  data-type="ObojoboDraft.Modules.Module"
  id="obo-19468343-da4a-49d7-b5b5-19ebcde1f424"
>
  <div>
    <MockComponent
      model={
        Object {
          "getComponentClass": [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "isThrow": false,
                "value": "MockComponent",
              },
            ],
          },
        }
      }
      moduleData={
        Object {
          "focusState": Object {},
          "navState": Object {},
        }
      }
    />
  </div>
</div>
`;
